--- a/unionapp/templates/blog.html
+++ b/unionapp/templates/blog.html
@@ -5,14 +5,14 @@
 
 {% block bodysection %}
 <div class="container" style="margin-top: 90px;">
-    <h1>this is test</h1>
-    <h1>this is test</h1>
-    <h1>this is test</h1>
-    <h1>this is test</h1>
-    <h1>this is test</h1>
-    <h1>this is test</h1>
-    <h1>this is test</h1>
-    <h1>this is test</h1>
+    <h1>This is blog</h1>
+    <h1>This is blog</h1>
+    <h1>This is blog</h1>
+    <h1>This is blog</h1>
+    <h1>This is blog</h1>
+    <h1>This is blog</h1>
+    <h1>This is blog</h1>
+    <h1>This is blog</h1>
 </div>
 {% endblock %}
 
