--- a/unionapp/templates/homepage.html
+++ b/unionapp/templates/homepage.html
@@ -8,27 +8,25 @@
     <div data-src="{% static 'uploads/slide-1.jpg' %}">
         <div class="camera_caption">
             <div class="container">
-                <h1 class="wow fadeInUp animated">World is greater than five #ELPolitic</h1>
-                <p class="wow fadeInUp animated" data-wow-delay="0.2s">With ELPolitic responsive landing page template, you can showcase your next politics & politician websites!</p>
-                <a data-scroll href="#" class="btn btn-light btn-radius btn-brd grd1">DONATE</a>
+                <h1 class="wow fadeInUp animated">सबैका लागि संघ , सधैको लागि संघ !!</h1>
+               <!-- <p class="wow fadeInUp animated" data-wow-delay="0.2s">With you can showcase your next politics & politician websites!</p>-->
+                <a data-scroll href="#" class="btn btn-light btn-radius btn-brd grd1">थप जानकरी लिनुहोस् !!</a>
             </div> <!-- /.container -->
         </div> <!-- /.camera_caption -->
     </div>
     <div data-src="{% static 'uploads/slide-2.jpg' %}">
         <div class="camera_caption">
             <div class="container">
-                <h1 class="wow fadeInUp animated">World is greater than five #ELPolitic</h1>
-                <p class="wow fadeInUp animated" data-wow-delay="0.2s">With ELPolitic responsive landing page template, you can showcase your next politics & politician websites!</p>
-                <a data-scroll href="#" class="btn btn-light btn-radius btn-brd grd1">DONATE</a>
+                <h1 class="wow fadeInUp animated">सबैका लागि संघ , सधैको लागि संघ !!</h1>
+                <a data-scroll href="#" class="btn btn-light btn-radius btn-brd grd1">थप जानकरी लिनुहोस् !!</a>
             </div> <!-- /.container -->
         </div> <!-- /.camera_caption -->
     </div>
     <div data-src="{% static 'uploads/slide-3.jpg' %}">
         <div class="camera_caption">
             <div class="container">
-                <h1 class="wow fadeInUp animated">World is greater than five #ELPolitic</h1>
-                <p class="wow fadeInUp animated" data-wow-delay="0.2s">With ELPolitic responsive landing page template, you can showcase your next politics & politician websites!</p>
-                <a data-scroll href="#" class="btn btn-light btn-radius btn-brd grd1">DONATE</a>
+                <h1 class="wow fadeInUp animated">सबैका लागि संघ , सधैको लागि संघ !!</h1>
+                <a data-scroll href="#" class="btn btn-light btn-radius btn-brd grd1">थप जानकरी लिनुहोस् !!</a>
             </div> <!-- /.container -->
         </div> <!-- /.camera_caption -->
     </div>
@@ -53,7 +51,7 @@
             <div class="col-md-6">
                 <div class="post-media wow fadeIn">
                     <img src="{% static 'uploads/about_04.png' %}" alt="" class="img-responsive img-rounded">
-                    <a href="http://www.youtube.com/watch?v=nrJtHemSPW4" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
+                    <a href="#" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
                 </div><!-- end media -->
             </div><!-- end col -->
         </div><!-- end row -->
@@ -332,7 +330,7 @@
                 <div class="issuse-wrap2 clearfix">
                     <div class="post-media wow fadeIn">
                         <img src="{% static 'uploads/news_01.jpg' %}" alt="" class="img-responsive img-rounded">
-                        <a href="http://www.youtube.com/watch?v=nrJtHemSPW4" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
+                        <a href="#" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
                     </div><!-- end media -->
                     <h4>"A Political News from Us! Don't forget Watch”</h4>
                     <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet massa sodales aliquam at eget quam. Integer ultricies et magna quis.</p>
@@ -343,7 +341,7 @@
                 <div class="issuse-wrap2 clearfix">
                     <div class="post-media wow fadeIn">
                         <img src="{% static 'uploads/news_02.jpg' %}" alt="" class="img-responsive img-rounded">
-                        <a href="http://www.youtube.com/watch?v=nrJtHemSPW4" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
+                        <a href="#" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
                     </div><!-- end media -->
                     <h4>"Our Speaker Talking About Our Strategy! All plans!"</h4>
                     <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet massa sodales aliquam at eget quam. Integer ultricies et magna quis.</p>
@@ -354,7 +352,7 @@
                 <div class="issuse-wrap2 clearfix">
                     <div class="post-media wow fadeIn">
                         <img src="{% static 'uploads/news_03.jpg' %}" alt="" class="img-responsive img-rounded">
-                        <a href="http://www.youtube.com/watch?v=nrJtHemSPW4" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
+                        <a href="#" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
                     </div><!-- end media -->
                     <h4>"Say Hello to our new politican : John DOE..”</h4>
                     <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet massa sodales aliquam at eget quam. Integer ultricies et magna quis.</p>
