all model created

--- a/unionapp/static/style.css
+++ b/unionapp/static/style.css
@@ -2486,7 +2486,7 @@ select.mobile-device {
     right: 0;
     bottom: 0;
     left: 0;
-    background: #076799;
+    background: #8c262d;
     z-index: 11000;
     position: fixed;
     display: block
