--- a/unionapp/templates/homepage.html
+++ b/unionapp/templates/homepage.html
@@ -51,7 +51,7 @@
             <div class="col-md-6">
                 <div class="post-media wow fadeIn">
                     <img src="{% static 'uploads/about_04.png' %}" alt="" class="img-responsive img-rounded">
-                    <a href="#" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
+                    <a href="https://www.youtube.com/watch?v=1CxAUPJlgos" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
                 </div><!-- end media -->
             </div><!-- end col -->
         </div><!-- end row -->
