--- a/unionapp/templates/blog.html
+++ b/unionapp/templates/blog.html
@@ -4,7 +4,7 @@
 
 
 {% block bodysection %}
-<div class="container" style="margin-top: 90px;">
+<div class="container" style="margin-top: 100px; margin-bottom: 50px;">
     <h1>This is blog</h1>
     <h1>This is blog</h1>
     <h1>This is blog</h1>
