--- a/unionapp/templates/blog_detail.html
+++ b/unionapp/templates/blog_detail.html
@@ -2,21 +2,46 @@
 {% load static %}
 {% block blog_active %}active{% endblock %}
 
-
 {% block bodysection %}
-<div class="container" style="margin-top: 100px;">
-    <div class="blog-detail">
+<div class="container" style="margin-top: 100px; margin-bottom: 50px;">
+    <div class="section-title">
         <h1>{{ blog.title }}</h1>
-        <div class="meta">
-            <span>By {{ blog.author }}</span>
-            <span>{{ blog.date|date:"F d, Y" }}</span>
+        <p class="lead">By {{ blog.author }} | {{ blog.date|date:"F d, Y" }}</p>
+    </div>
+
+    <div class="row">
+        <div class="col-md-8">
+            <div class="post-media">
+                <img src="{{ blog.image.url }}" alt="{{ blog.title }}" class="img-responsive img-rounded">
+            </div>
+
+            <div class="blog-description text-center mt-4">
+                {{ blog.description|safe }}
+            </div>
         </div>
-        <img src="{{ blog.image.url }}" class="img-responsive" alt="{{ blog.title }}">
-        <div class="content">
-            {{ blog.description|safe }}
+
+        <div class="col-md-4">
+            {% if latest_blogs %}
+            <div class="sidebar-widget">
+                <h2 class="text-center"> <b>Latest Posts</b></h2>
+                <hr>
+                {% for item in latest_blogs %}
+                <div class="related-item mb-3 text-center">
+                    <a href="{% url 'blog_detail' item.id %}">
+                        <img src="{{ item.image.url }}" alt="{{ item.title }}" class="img-responsive img-rounded" style="max-height: 120px; margin: auto;">
+                        <h5>{{ item.title }}</h5>
+                    </a>
+                </div>
+                {% endfor %}
+            </div>
+            {% endif %}
         </div>
-        <a href="{% url 'home' %}#blog" class="btn btn-light btn-radius btn-brd grd1">Back to Blog</a>
+    </div>
+
+    <div class="text-center mt-4">
+        <a href="{% url 'home' %}#blog" class="btn btn-light btn-radius btn-brd grd1">
+            <i class="fa fa-arrow-left"></i> Back to Blog
+        </a>
     </div>
 </div>
 {% endblock %}
-
