--- a/unionapp/templates/homepage.html
+++ b/unionapp/templates/homepage.html
@@ -52,7 +52,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
                <div class="service-widget">
                     <div class="post-media_pp wow fadeIn">
-                        <a href="{{ content.image.url }}"  class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                        <a href="{% url 'org_detail' content.id %}" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
                         <img src="{{ content.image.url }}" alt="" class="img-responsive">
                         <div class="hover-up">
                             <h3>{{ content.title }}</h3>
@@ -80,7 +80,7 @@
         <div class="row">
             <div class="col-md-5">
                 <div class="issuse-wrap2 clearfix">
-                    <a href="#">
+                    <a href="{% url 'plan_detail' featured_issue.id %}">
                     <img src="{{ featured_issue.image.url }}" alt="" class="img-responsive img-rounded">
                     <h4>"{{ featured_issue.title }}"</h4>
                 </a>
@@ -92,7 +92,7 @@
             <div class="col-md-7">
                 {% for issue in issues %}
                 <div class="issuse-wrap clearfix">
-                    <a href="#" >
+                    <a href="{% url 'plan_detail' issue.id %}" >
                         <img src="{{ issue.image.url }}" alt="" class="img-responsive img-rounded alignleft">
                    
                     
