--- a/unionapp/templates/homepage.html
+++ b/unionapp/templates/homepage.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="message-box">
-                    <h4>Who We are</h4>
+                    <h4>हामी को हौं</h4>
                     <h2>{{ welcome_content.title }}</h2>
                     <blockquote class="lead">{{ welcome_content.slogan }}</blockquote>
                     {{ welcome_content.description|safe }}
@@ -147,7 +147,7 @@
     <div class="container">
         <div class="section-title text-center">
             <h3>Gallery</h3>
-            <p class="lead">Our collection of memorable moments and events</p>
+            <p class="lead">हाम्रो अविस्मरणीय क्षणहरूको संग्रह</p>
         </div><!-- end title -->
         
         <div class="gallery-menu row">
@@ -180,8 +180,8 @@
 <div id="media" data-scroll-index="5" class="section wb">
     <div class="container">
         <div class="section-title text-center">
-            <h3>Videos</h3>
-            <p class="lead">Watch our latest videos and updates</p>
+            <h3>िडियो</h3>
+            <p class="lead">हाम्रो नयाँ भिडियोहरू र अपडेटहरू हेर्नुहोस्।</p>
         </div><!-- end title -->
 
         <div class="row">
