--- a/unionapp/templates/layout/base.html
+++ b/unionapp/templates/layout/base.html
@@ -73,8 +73,8 @@
                         <li><a  href="#issues">इतिहास</a></li>
                         <li><a  href="#event">नीति तथा कार्यक्रम</a></li>
 						<li><a  href="#gallery">फोटोहरु</a></li>
-                        <li><a  href="{% url 'video_list' %}" class="{% block video_list %}{% endblock %}">Video</a></li>
-                        <li><a  href="{% url 'blog_list' %}" class="{% block blog_active %}{% endblock %}">Blog</a></li>
+                        <li><a  href="{% url 'video_list' %}" class="{% block video_list %}{% endblock %}">भिडियो</a></li>
+                        <li><a  href="{% url 'blog_list' %}" class="{% block blog_active %}{% endblock %}">लेख</a></li>
                         <li><a  href="#contact">सम्पर्क</a></li>
                     </ul>
                 </div>
