--- a/unionapp/templates/layout/base.html
+++ b/unionapp/templates/layout/base.html
@@ -137,7 +137,7 @@
                 
                 <div class="col-md-6">
                     <div class="donate-info">
-                        <h4>Why Donate?</h4>
+                       <!-- <h4>Why Donate?</h4>
                         <p>Your generous donation helps us continue our mission and make a difference in our community.</p>
                         
                         <h4>Other Ways to Donate</h4>
@@ -145,7 +145,7 @@
                             <li><i class="fa fa-bank"></i> Bank Transfer: <strong>Account Name, Account Number, Bank Name</strong></li>
                             <li><i class="fa fa-mobile"></i> Mobile Payment: <strong>9841XXXXXX (eSewa/Khalti)</strong></li>
                             <li><i class="fa fa-envelope"></i> Check: <strong>Payable to Organization Name</strong></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div><!-- end col -->
             </div><!-- end row -->
